[package]
name = "kaudio"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
byteorder = "1.5.0"
futures-util = "0.3.30"
ogg = { version = "0.9.1", features = ["async"] }
opus = "0.3.0"
regex = "1.10.3"
rubato = "0.15.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.115"
symphonia = { version = "0.5.3", features = ["all"] }
tokio = { version = "1.35.1", features = ["full"] }
