[package]
name = "kaudio"
version = "0.2.0"
edition = "2021"
license = "MIT/Apache-2.0"
description = "utilities for audio processing" 
keywords = ["audio"]
categories = ["science"]

[dependencies]
byteorder = "1.5.0"
futures-util = "0.3.30"
ogg = { version = "0.9.1", features = ["async"] }
opus = "0.3.0"
regex = "1.10.3"
rubato = "0.15.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.115"
symphonia = { version = "0.5.3", features = ["all"] }
thiserror = "2.0.11"
tokio = { version = "1.35.1", features = ["full"] }
